--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/postcss": "^4.1.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "lucide-react": "^0.487.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "uuid": "^3.4.0",
     "vite": "^6.2.5"
@@ -35,6 +38,7 @@
   "devDependencies": {
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "typescript": "^5.8.3"
   }
