--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@vitejs/plugin-react": "^4.3.4",
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
