--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.8.4",
+    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
@@ -17,13 +19,17 @@
     "react-router-dom": "^7.5.0",
     "util": "^0.12.5",
     "uuid": "^3.4.0",
-    "vite": "^6.2.5"
+    "vite": "^6.2.5",
+    "vitest": "^3.1.1"
   },
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "test": "jest",
-    "eject": "react-scripts eject"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage",
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 3001 "
   },
   "eslintConfig": {
     "extends": "react-app"
