--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.8.4",
+    "firebase": "^11.6.0",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "util": "^0.12.5",
