--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/postcss": "^4.1.3",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.8.4",
     "firebase": "^11.6.0",
@@ -21,8 +19,7 @@
     "react-router-dom": "^7.5.0",
     "util": "^0.12.5",
     "uuid": "^3.4.0",
-    "vite": "^6.2.5",
-    "vitest": "^3.1.1"
+    "vite": "^6.2.5"
   },
   "scripts": {
     "start": "vite",
@@ -52,6 +49,9 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
@@ -61,7 +61,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "redux-mock-store": "^1.5.5",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.1"
   },
   "jest": {
     "setupFiles": [
